Tiny fix to titlebar right-side button spacing

--- a/css/platinum.css
+++ b/css/platinum.css
@@ -141,7 +141,7 @@ body {
     margin: 0;
     margin-right: 3px;
     margin-left: 1px;
-    width: 97%;
+    width: 99%;
 }
 
 .visuallyhidden {
